# apertium-hbs_HR-hbs_SR

./: .gitattributes  Makefile  Makefile.am  README  ap_include.am  apertium-hbs.hbs_HR-hbs_SR.dix  apertium-hbs.hbs_HR-hbs_SR.t1x  apertium-hbs.hbs_SR-hbs_HR.t1x  config.status  configure.ac  gen-bidix.sh  modes.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
